--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,28 @@
 {
-  "name": "vendor-name/example-package",
+  "name": "tombroucke/sage-html-forms-captcha",
   "type": "package",
-  "description": "An example package for Roots Acorn.",
+  "description": "Service Provider that adds recaptcha support to the HTML forms plugin",
   "license": "MIT",
   "authors": [
     {
-      "name": "Brandon Nifong",
-      "email": "brandon@tendency.me"
+      "name": "Tom Broucke",
+      "email": "tom@tombroucke.be"
     }
   ],
   "autoload": {
     "psr-4": {
-      "VendorName\\ExamplePackage\\": "src/"
+      "Otomaties\\SageHtmlFormsCaptcha\\": "src/"
     }
   },
   "require": {
-    "php": "^8.0"
+    "php": "^8.0",
+    "google/recaptcha": "^1.3"
   },
   "extra": {
     "acorn": {
       "providers": [
-        "VendorName\\ExamplePackage\\Providers\\ExampleServiceProvider"
-      ],
-      "aliases": {
-        "Example": "VendorName\\ExamplePackage\\Facades\\Example"
-      }
+        "Otomaties\\SageHtmlFormsCaptcha\\Providers\\SageHtmlFormsCaptchaServiceProvider"
+      ]
     }
   }
 }
